# front-office-v2

./: .env.example  .gitignore  DEPENDENCIES.md  Dockerfile  Dockerfile.langgraph  README.md  deploy.ps1  docker-compose.server.yml  docker-compose.yml  pyproject.toml
docs/: developer-guide.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/pages/: Admin.tsx  Chat.tsx  Login.tsx  Search.tsx  Settings.tsx
src/agent/: graph.py  search.py
src/api/: auth.py  database.py  main.py
src/ingestion/: ingest.py
