[project]
name = "front-office-pro"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.1.3",
    "langgraph-cli[inmem]>=0.4.19",
    "motor>=3.7.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "qdrant-client>=1.17.1",
    "uvicorn[standard]>=0.42.0",
    "minio>=7.2.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "pymongo>=4.0.0",
    "fastembed>=0.4.0",
    "python-multipart>=0.0.22",
]

[tool.uv]
package = true
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
    "sys_platform == 'win32'",
]
no-build-package = [
    # SQLAlchemy async support (C extension)
    "greenlet",
    # File locking (pure Python but version mismatches on Windows)
    "filelock",
    # HTTP client with C extensions
    "aiohttp",
    "frozenlist",
    "multidict",
    "yarl",
    "propcache",
    # Security / crypto (C extensions)
    "bcrypt",
    "cffi",
    "cryptography",
    "argon2-cffi-bindings",
    "pycryptodome",
    # gRPC (large native C++ libs)
    "grpcio",
    "grpcio-tools",
    # Serialization (Rust extensions)
    "orjson",
    "ormsgpack",
    "pydantic-core",
    "tokenizers",
    "watchfiles",
    # Data / ML (C/Rust extensions)
    "numpy",
    "onnxruntime",
    "pillow",
    "lxml",
    "xxhash",
    "mmh3",
    "zstandard",
    "hf-xet",
    # Misc native
    "httptools",
    "portalocker",
    "uuid-utils",
    "py-rust-stemmers",
    "jsonschema-rs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
